--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "BitTorrent bencode format encode/decode parser",
   "main": "dist/main.js",
   "scripts": {
-    "build": "tsc -p .",
+    "build": "npm run lint && npm test && npm run compile",
     "start": "npm run build -- -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "tslint src/**/*.ts",
+    "compile": "tsc -p ./"
   },
   "keywords": [
     "bencode"
@@ -14,6 +16,11 @@
   "author": "lemontv",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.5",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.1.0",
+    "tslint": "^5.20.0",
     "typescript": "^3.6.3"
   }
 }
