--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npm run lint && npm test && npm run compile",
     "start": "npm run build -- -w",
     "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "tslint src/**/*.ts",
     "compile": "tsc -p ./"
   },
