--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "outDir": "dist",
     "sourceMap": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["test/**/*.ts" ],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
