--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,8 @@
     "lib": ["es2015"],
     "strict": true,
     "declaration": true,
-    "outDir": "dist",
-    "sourceMap": true
+    "outDir": "dist"
   },
-  "include": ["src/**/*.ts", "test/**/*.ts" ],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*.ts", "index.d.ts"],
+  "exclude": ["node_modules", "test/**/*.ts"]
 }
