Added first circleci configuration

--- a/package.json
+++ b/package.json
@@ -25,5 +25,9 @@
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
     "typescript": "^3.6.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lemontv/bencode.git"
   }
 }
