--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "npm run lint && jest",
     "test:watch": "jest --watch",
     "lint": "tslint src/**/*.ts",
-    "compile": "tsc -p ./"
+    "compile": "tsc -p ./",
+    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "keywords": [
     "bencode"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
+    "coveralls": "^3.0.6",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
