--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2.1
+
 jobs:
   build:
+    working_directory: ~/repo
     docker:
       - image: circleci/node:lts
     steps:
@@ -10,12 +12,37 @@ jobs:
           command: npm ci
       - run:
           name: Running tests
-          command: npm run test
+          command: npm test
       - run:
           name: Collect coverage
           command: npm run coverage
-      - store_artifacts:
-          path: coverage
       - run:
           name: Build
           command: npm run build
+  deploy:
+    working_directory: ~/repo
+    docker:
+      - image: circleci/node:lts
+    steps:
+      - attach_workspace:
+          at: ~/repo
+      - run:
+          name: Authenticate with registry
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/repo/.npmrc
+      - run:
+          name: Publish package
+          command: npm publish
+
+workflows:
+  version: 2
+  npm-publish:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
