--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@lemontv/bencode",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "BitTorrent bencode format encode/decode parser",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "build": "npm run lint && npm test && npm run clean && npm run compile",
+    "build": "npm run clean && npm run compile",
     "start": "npm run build -- -w",
-    "test": "jest",
+    "test": "npm run lint && jest",
     "test:watch": "jest --watch",
     "lint": "tslint src/**/*.ts",
-    "compile": "tsc -p ./"
+    "compile": "tsc -p ./",
+    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "keywords": [
     "bencode"
@@ -21,9 +22,14 @@
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
+    "coveralls": "^3.0.6",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
     "tslint": "^5.20.0",
     "typescript": "^3.6.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lemontv/bencode.git"
   }
 }
