--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ jobs:
     docker:
       - image: circleci/node:lts
     steps:
+      - attach_workspace:
+          at: ~/repo
       - checkout
       - run:
           name: Install dependencies
@@ -23,7 +25,7 @@ jobs:
       - image: circleci/node:lts
     steps:
       - attach_workspace:
-          at: .
+          at: ~/repo
       - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > .npmrc
