Change license to MIT

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "email": "chen@lemontv.me",
     "url": "https://lemontv.me/"
   },
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
